--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "socialnetwork",
+    "name": "api-blog-aprendizaje",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
